STIJ-72: Added code to hide fonts before they are loaded to prevent a flicker.

--- a/components/00-settings/_vars.scss
+++ b/components/00-settings/_vars.scss
@@ -41,7 +41,7 @@ $primary-font-family: $default-font-family !default;
 $primary-font-weight: $default-font-weight !default;
 $primary-font-size: $default-font-size !default; //px
 $primary-line-height: $default-line-height !default; //em
-$secondary-font-family: 'expressway', sans-serif !default;
+$secondary-font-family: expressway, sans-serif !default;
 
 $bg-outside-container: $color-lightest-gray !default;
 $border-outside-container: 1px solid $color-light-gray !default;
