--- a/components/21-atoms/headings/_headings.scss
+++ b/components/21-atoms/headings/_headings.scss
@@ -21,6 +21,11 @@ h6,
   font-weight: 800;
   text-decoration: none;
 
+  // Bypass the FOUT of typekit while loading asynchronously.
+  .wf-loading & {
+    visibility: hidden;
+  }
+
   a {
     text-decoration: none;
   }
